# serverless-rust

./: README.md
rust-azure-functions/: Cargo.toml  handler
rust-azure-functions/src/: main.rs
rust-lambda/: Cargo.toml
rust-lambda/.github/workflows/: build-rust.yaml
rust-lambda/src/: main.rs
