[package]
name = "lamda-deno"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.3.0"
tokio = "1.9.0"
serde_json = "1.0.64"
itertools = "0.10.1"
num = "0.4.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
